<resources>
    <string name="app_name">Metal Archives</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!--Strings for MOTDListItems -->
    <string name="motd_list_item_card_title">Placeholder Title</string>
    <string name="motd_list_item_card_body">Placeholder Body</string>

    <!--Strings for search DialogPlus -->
    <string name="fab_search_by_artist">Search By Artist</string>
    <string name="fab_search_by_album">Search By Album </string>
    <string name="fab_search_by_label">Search By Label</string>
    <string name="fab_search_by_genre">Search By Genre</string>
    <string name="fab_search_by_song">Search By Song</string>
    <string name="fab_search_by_member">Search By Member</string>

    <!--Strings for Band Search Results -->
    <string name="search_results_band_name_label">Band Name</string>
    <string name="search_results_band_genre_label">Band Genre</string>
    <string name="search_results_band_origin_label">Band Origin</string>
    <string name="search_results_band_name">Band Name</string>
    <string name="search_results_band_genre">Band Genre</string>
    <string name="search_results_band_origin">Band Origin</string>

    <!-- Strings for Band Discography Album Item-->
    <string name="band_discog_album_title">Album Title</string>
    <string name="band_discog_album_release">Album Release</string>

    <!--- Strings for BandInfoActivity's BottomBar -->
    <string name="band_info_bottom_bar_about">About</string>
    <string name="band_info_bottom_bar_discography">Discography</string>
    <string name="band_info_bottom_bar_members">Members</string>
    <string name="band_info_bottom_bar_reviews">Reviews</string>
    <string name="band_info_bottom_bar_similarartists">Similar Artists</string>


    <!-- Strings for DiscInfoActivity -->
    <string name="disc_info_bottombar_about">About</string>
    <string name="disc_info_bottombar_songs">Songs</string>
    <string name="disc_info_bottombar_lineup">Lineup</string>
    <string name="disc_info_bottombar_reviews">Reviews</string>
    <string name="disc_info_bottombar_versions">Versions</string>

    <!--Strings for DiscInfoFragment -->
    <string name="disc_info_fragment_title">Title</string>

    <!-- Strings for DiscInfoSongsFragment -->

    <!-- Strings for BandRosterFragment-->
    <string name="band_roster_fragment_name">Band Member Name</string>
    <string name="band_roster_fragment_instrument">Band Member Instrument</string>
    <string name="band_roster_fragment_years">Band Member Years Active</string>


</resources>
